update the majer prrson

--- a/about.html
+++ b/about.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ShopEase - Your Online Store</title>
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+    <title>About Us - ShopEase</title>
+    <link rel="stylesheet" href="css/style1.css">
 </head>
 <body>
-    <!-- Header/Navbar -->
+    <!-- Header -->
+     <!-- Header/Navbar -->
    <header>
     <div class="container">
         <div class="logo">
@@ -23,9 +23,9 @@
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="products.html">Products</a></li>
-                <li><a href="categories.html">Categories</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="contact.html">Contact</a></li>
+                <li><a href="#">Categories</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Contact</a></li>
             </ul>
         </nav>
         
@@ -37,61 +37,38 @@
     </div>
 </header>
 
-    <!-- Search Form -->
-    <div class="search-form-container">
-        <form action="products.html" method="get">
-            <input type="search" name="search" placeholder="Search products...">
-            <button type="submit"><i class="fas fa-search"></i></button>
-        </form>
-        <span class="close-search"><i class="fas fa-times"></i></span>
-    </div>
 
-    <!-- Hero Section -->
-    <section class="hero">
+    <!-- About Section -->
+    <section class="about-section">
         <div class="container">
-            <div class="hero-content">
-                <h1>Summer Collection 2023</h1>
-                <p>Up to 50% Off on Selected Items</p>
-                <a href="products.html" class="btn">Shop Now</a>
+            <h2 class="section-title">Our Story</h2>
+            <div class="about-content">
+                <div class="about-text">
+                    <h3>Welcome to ShopEase</h3>
+                    <p>Founded in 2023, ShopEase is committed to delivering high-quality products with a seamless shopping experience. Our mission is to bridge the gap between customers and premium goods at affordable prices.</p>
+                    <p>With over 10,000 satisfied customers, we pride ourselves on fast delivery, excellent customer service, and a curated selection of products.</p>
+                </div>
+                <div class="about-image">
+                    <img src="images/about-us.jpg" alt="Our Team">
+                </div>
             </div>
-        </div>
-    </section>
-
-    <!-- Featured Categories -->
-    <section class="categories">
-        <div class="container">
-            <h2 class="section-title">Shop by Category</h2>
-            <div class="category-grid">
-                <div class="category-card">
-                    <img src="images/elec.jpg" alt="Electronics">
-                    <h3>Electronics</h3>
-                    <a href="products.html?category=electronics" class="btn">View Products</a>
-                </div>
-                <div class="category-card">
-                    <img src="images/fishon.webp" alt="Fashion">
-                    <h3>Fashion</h3>
-                    <a href="products.html?category=fashion" class="btn">View Products</a>
-                </div>
-                <div class="category-card">
-                    <img src="images/g.avif" alt="Home & Garden">
-                    <h3>Home & Garden</h3>
-                    <a href="products.html?category=home" class="btn">View Products</a>
+            <div class="team-section">
+                <h3>Meet Our Team</h3>
+                <div class="team-grid">
+                    <div class="team-member">
+                        <img src="images/team1.jpg" alt="CEO">
+                        <h4>John Doe</h4>
+                        <p>Founder & CEO</p>
+                    </div>
+                    <div class="team-member">
+                        <img src="images/team2.jpg" alt="CTO">
+                        <h4>Jane Smith</h4>
+                        <p>Chief Technology Officer</p>
+                    </div>
                 </div>
             </div>
         </div>
     </section>
-
-    <!-- Featured Products -->
-    <section class="featured-products">
-        <div class="container">
-            <h2 class="section-title">Featured Products</h2>
-            <div class="product-grid">
-                <!-- Products will be loaded via JavaScript -->
-            </div>
-        </div>
-    </section>
-
-    <!-- Footer -->
     <footer>
         <div class="container">
             <div class="footer-grid">
@@ -134,6 +111,5 @@
         </div>
     </footer>
 
-    <script src="js/main.js"></script>
 </body>
 </html>
