--- a/contact.html
+++ b/contact.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ShopEase - Your Online Store</title>
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+    <title>Contact Us - ShopEase</title>
+    <link rel="stylesheet" href="css/style1.css">
 </head>
 <body>
-    <!-- Header/Navbar -->
+    <!-- Header -->
+     <!-- Header/Navbar -->
    <header>
     <div class="container">
         <div class="logo">
@@ -23,9 +23,9 @@
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="products.html">Products</a></li>
-                <li><a href="categories.html">Categories</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="contact.html">Contact</a></li>
+                <li><a href="#">Categories</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Contact</a></li>
             </ul>
         </nav>
         
@@ -37,61 +37,46 @@
     </div>
 </header>
 
-    <!-- Search Form -->
-    <div class="search-form-container">
-        <form action="products.html" method="get">
-            <input type="search" name="search" placeholder="Search products...">
-            <button type="submit"><i class="fas fa-search"></i></button>
-        </form>
-        <span class="close-search"><i class="fas fa-times"></i></span>
-    </div>
 
-    <!-- Hero Section -->
-    <section class="hero">
+    <!-- Contact Section -->
+    <section class="contact-section">
         <div class="container">
-            <div class="hero-content">
-                <h1>Summer Collection 2023</h1>
-                <p>Up to 50% Off on Selected Items</p>
-                <a href="products.html" class="btn">Shop Now</a>
+            <h2 class="section-title">Get in Touch</h2>
+            <div class="contact-container">
+                <div class="contact-info">
+                    <h3>Contact Information</h3>
+                    <p><i class="fas fa-map-marker-alt"></i> 123 Main Street, City, Country</p>
+                    <p><i class="fas fa-phone"></i> +1 (555) 123-4567</p>
+                    <p><i class="fas fa-envelope"></i> info@shopease.com</p>
+                    <div class="social-links">
+                        <a href="#"><i class="fab fa-facebook-f"></i></a>
+                        <a href="#"><i class="fab fa-twitter"></i></a>
+                        <a href="#"><i class="fab fa-instagram"></i></a>
+                    </div>
+                </div>
+                <div class="contact-form">
+                    <form id="contactForm">
+                        <div class="form-group">
+                            <input type="text" placeholder="Your Name" required>
+                        </div>
+                        <div class="form-group">
+                            <input type="email" placeholder="Your Email" required>
+                        </div>
+                        <div class="form-group">
+                            <input type="text" placeholder="Subject">
+                        </div>
+                        <div class="form-group">
+                            <textarea placeholder="Your Message" required></textarea>
+                        </div>
+                        <button type="submit" class="btn">Send Message</button>
+                    </form>
+                </div>
+            </div>
+            <div class="map-container">
+                <iframe src="https://www.google.com/maps/embed?pb=..." allowfullscreen></iframe>
             </div>
         </div>
     </section>
-
-    <!-- Featured Categories -->
-    <section class="categories">
-        <div class="container">
-            <h2 class="section-title">Shop by Category</h2>
-            <div class="category-grid">
-                <div class="category-card">
-                    <img src="images/elec.jpg" alt="Electronics">
-                    <h3>Electronics</h3>
-                    <a href="products.html?category=electronics" class="btn">View Products</a>
-                </div>
-                <div class="category-card">
-                    <img src="images/fishon.webp" alt="Fashion">
-                    <h3>Fashion</h3>
-                    <a href="products.html?category=fashion" class="btn">View Products</a>
-                </div>
-                <div class="category-card">
-                    <img src="images/g.avif" alt="Home & Garden">
-                    <h3>Home & Garden</h3>
-                    <a href="products.html?category=home" class="btn">View Products</a>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <!-- Featured Products -->
-    <section class="featured-products">
-        <div class="container">
-            <h2 class="section-title">Featured Products</h2>
-            <div class="product-grid">
-                <!-- Products will be loaded via JavaScript -->
-            </div>
-        </div>
-    </section>
-
-    <!-- Footer -->
     <footer>
         <div class="container">
             <div class="footer-grid">
@@ -134,6 +119,5 @@
         </div>
     </footer>
 
-    <script src="js/main.js"></script>
 </body>
 </html>
