--- a/thank-you.html
+++ b/thank-you.html
@@ -4,14 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Thank You - ShopEase</title>
-    <link rel="stylesheet" href="css/ct.css">
+    <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
 <body>
     <!-- Header (same as index.html) -->
-    <header>
-        <!-- Copy header from index.html -->
-    </header>
+     
 
     <!-- Thank You Section -->
     <section class="thank-you-section">
@@ -40,9 +38,6 @@
     </section>
 
     <!-- Footer (same as index.html) -->
-    <footer>
-        <!-- Copy footer from index.html -->
-    </footer>
 
     <script src="js/thank-you.js"></script>
 </body>
