--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
    <header>
     <div class="container">
         <div class="logo">
-            <a href="index.html">ShopEase</a>
+            <a href="index.html">E-commerce</a>
         </div>
         
         <div class="menu-btn">
@@ -119,8 +119,8 @@
                 </div>
                 <div class="footer-col">
                     <h3>Contact Us</h3>
-                    <p>Email: info@shopease.com</p>
-                    <p>Phone: +1 (555) 123-4567</p>
+                    <p>Email: info@e-commerce.com</p>
+                    <p>Phone: +91 123-4567</p>
                     <div class="social-links">
                         <a href="#"><i class="fab fa-facebook"></i></a>
                         <a href="#"><i class="fab fa-twitter"></i></a>
